--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <title>Furnitur App</title>
 
+{% comment %} Bootstrap {% endcomment %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+
 <h2>Input Kos</h2>
 <form method="post" action="{{ url_for('input_furniture') }}">
     Ukuran Kos<br>
